<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.licheedev.serialtool.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_button_height"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/horizontal_margin"
        android:paddingRight="@dimen/horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:text="@string/select_serial_port"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_devices"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_8dp"
            android:layout_weight="1"
            android:background="@color/colorLightBlue"
            android:textSize="@dimen/default_text_size"
            tools:entries="@array/baudrates"
            tools:ignore="TouchTargetSizeCheck" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:text="@string/select_baud_rate"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_baudrate"
            android:layout_width="@dimen/normal_200dp"
            android:layout_height="wrap_content"
            android:background="@color/colorLightBlue"
            android:textSize="@dimen/default_text_size"
            tools:entries="@array/baudrates"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btn_open_device"
            android:layout_width="@dimen/normal_240dp"
            android:layout_height="@dimen/default_button_height"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:text="@string/open_serial_port"
            android:textSize="10dp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:context="com.licheedev.serialtool.activity.MainActivity">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <EditText
                android:id="@+id/et_data"
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:digits="0123456789abcdefABCDEF"
                android:hint="@string/input_data"
                android:inputType="textCapCharacters"
                android:minHeight="48dp"
                android:singleLine="true"
                android:textSize="@dimen/edit_text_size" />

            <Button
                android:id="@+id/btn_send_data"
                style="@style/ButtonStyle"
                android:layout_height="wrap_content"
                android:text="@string/send_data" />

            <Button
                android:id="@+id/btn_load_list"
                style="@style/ButtonStyle"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:text="@string/load_cmd_list" />

            <Button
                android:id="@+id/button"
                android:layout_width="500px"
                android:layout_height="150px"
                android:text="1"
                android:backgroundTint="#4CAF50"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="500px"
                android:layout_height="150px"
                android:text="2"
                android:backgroundTint="#4CAF50"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="500px"
                android:layout_height="150px"
                android:text="3"
                android:backgroundTint="#4CAF50"/>

            <Button
                android:id="@+id/button4"
                android:layout_width="500px"
                android:layout_height="150px"
                android:text="4"
                android:backgroundTint="#4CAF50"/>

            <Button
                android:id="@+id/button5"
                android:layout_width="500px"
                android:layout_height="150px"
                android:text="5"
                android:backgroundTint="#4CAF50"/>

            <Button
                android:id="@+id/button6"
                android:layout_width="500px"
                android:layout_height="150px"
                android:text="6"
                android:backgroundTint="#4CAF50"/>

            <Button
                android:id="@+id/button7"
                android:layout_width="500px"
                android:layout_height="150px"
                android:text="7"
                android:backgroundTint="#4CAF50"/>

            <Button
                android:id="@+id/button8"
                android:layout_width="500px"
                android:layout_height="150px"
                android:text="8"
                android:backgroundTint="#4CAF50"/>

            <Button
                android:id="@+id/button9"
                android:layout_width="500px"
                android:layout_height="150px"
                android:text="9"
                android:backgroundTint="#4CAF50"/>

            <Button
                android:id="@+id/button10"
                android:layout_width="500px"
                android:layout_height="150px"
                android:text="10"
                android:backgroundTint="#4CAF50"/>

        </LinearLayout>

        <include
            layout="@layout/include_fragment_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>

